# UnityAndroidCameraNative

./: .gitignore  README.md
AndroidCamera/app/: build.gradle.kts
AndroidCamera/app/src/main/cpp/: CMakeLists.txt  RenderingPlugin.cpp
AndroidCamera/app/src/main/cpp/Unity/: IUnityInterface.h  (+1 more)
AndroidCamera/gradle/wrapper/: gradle-wrapper.properties
Assets/: DefaultVolumeProfile.asset  UniversalRenderPipelineGlobalSettings.asset
Assets/Materials/: M_UI.mat
Assets/Plugins/Android/: AndroidManifest.xml  CameraPluginActivity.java  ScriptC_yuv2rgb.java  UsedThroughReflection.java
Assets/Plugins/Android/Editor/: PreProcess_Android.cs
Assets/Plugins/CameraNative/Android/: CameraPluginActivity.java  YuvToRgb.java  yuv2rgbBitCode.java
Assets/Plugins/CameraNative/Android/Editor/: PreProcess_Android.cs
Assets/Plugins/ShowFPS/Prefabs/: Canvas-FPS.prefab
Assets/Plugins/ShowFPS/Scripts/: FPSDisplay.cs
Assets/Plugins/ShowFPS/Scripts/Editor/: FPSDisplay.uxml  FPSDisplayEditorView.cs
Assets/Plugins/ShowFPS/UI/: FPS Panel Settings.asset  FPSText.uxml
Assets/Scenes/: Sample.unity
Assets/Scripts/: CameraBackground.cs  ChangeFrame.cs  NativeCamera.cs  UpdateCamera.cs
Assets/Settings/: URP2D.asset
ExtraAndroidCode/: CMakeLists.txt  RenderingPlugin.h
ExtraAndroidCode/Unity/: IUnityGraphics.h  IUnityGraphicsD3D11.h  IUnityGraphicsD3D9.h
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset
UserSettings/: AndroidLogcatSettings.asset  EditorUserSettings.asset
UserSettings/Layouts/: default-6000.dwlt
(+3 files in other folders)
